@@ -20,8 +20,30 @@ class TestColumns(unittest.TestCase):
     def test_length(self):
         self.assertEqual(len(self.table.columns), 3)
 
+    def test_get_column_data(self):
+        self.assertEqual(self.table.columns['one']._data(), [1, 2, None])
+
+    def test_get_column_data_cached(self):
+        c = self.table.columns['one']
+
+        self.assertIs(c._cached_data, None)
+
+        data = c._data()
+
+        self.assertEqual(c._cached_data, [1, 2, None])
+        
+        data2 = c._data()
+
+        self.assertIs(data, data2)
+
     def test_get_column(self):
         self.assertEqual(self.table.columns['one'], [1, 2, None])
+
+    def test_get_column_cached(self):
+        c = self.table.columns['one']
+        c2 = self.table.columns['one']
+
+        self.assertIs(c, c2)
 
     def test_get_invalid_column(self):
         with self.assertRaises(KeyError):
